--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "debug": "~2.2.0",
     "easytimer": "^1.1.1",
     "express": "~4.14.0",
+    "express-jwt": "^5.1.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.1.9",
+    "mongodb": "^2.2.11",
+    "monk": "^3.1.3",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
     "sweetalert2": "^6.1.0",
     "three": "^0.82.1",
-    "tween.js": "^16.3.5",
-    "mongodb": "^2.2.11",
-    "monk": "^3.1.3"
+    "tween.js": "^16.3.5"
   }
 }
