--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "~4.14.0",
     "express-jwt": "^5.1.0",
     "jade": "~1.11.0",
+    "jquery": "^3.1.1",
     "jsonwebtoken": "^7.1.9",
     "mongodb": "^2.2.11",
     "monk": "^3.1.3",
