--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.1.1",
     "jsonwebtoken": "^7.1.9",
     "mongodb": "^2.2.11",
+    "mongoose": "^4.7.0",
     "monk": "^3.1.3",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
